working on spinners

--- a/app/src/main/res/layout/fragment_randomize.xml
+++ b/app/src/main/res/layout/fragment_randomize.xml
@@ -1,27 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:background="@android:color/holo_red_light">
+  android:background="@android:color/white"
+  android:orientation="vertical">
 
   <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/randomize_fragment"
-    android:textSize="30sp"
-    android:layout_centerInParent="true"/>
+    android:textSize="30sp"/>
 
+  <Spinner
+    android:id="@+id/spinnerMeat"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="100dp"
+    android:spinnerMode="dialog"
+    android:text="@string/choose_meat"
+    />
+
+  <Spinner
+    android:id="@+id/spinnerVegetable"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="100dp"
+    android:text="@string/choose_vegetable"/>
 
   <Button
     android:id="@+id/randomize_button"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="36dp"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentStart="true"
     android:textAppearance="@style/TextAppearance.AppCompat"
-    tools:text="Randomize!"/>
+    android:text="@string/randomize"/>
 
-</RelativeLayout>
+</LinearLayout>
