added some things to fragment Random and started on a test for my database

--- a/app/src/main/res/layout/fragment_randomize.xml
+++ b/app/src/main/res/layout/fragment_randomize.xml
@@ -17,15 +17,14 @@
     android:id="@+id/spinnerMeat"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="56dp"
-    android:spinnerMode="dialog"
+    android:layout_marginTop="50dp"
     android:text="@string/choose_meat"/>
 
   <Spinner
     android:id="@+id/spinnerVegetable"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="100dp"
+    android:layout_marginTop="20dp"
     android:text="@string/choose_vegetable"/>
 
   <Button
@@ -35,5 +34,30 @@
     android:layout_marginBottom="36dp"
     android:textAppearance="@style/TextAppearance.AppCompat"
     android:text="@string/randomize"/>
+  
+<FrameLayout
+  android:layout_width="match_parent"
+  android:layout_height="match_parent">
+
+  <ImageView
+    android:id="@+id/backgroundImage"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:scaleType="centerCrop"
+    android:src="@drawable/ic_image"/>
+
+  <TextView
+    android:id="@+id/descTextView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical"
+    android:layout_marginTop="70dp"
+    android:background="@android:color/holo_blue_light"
+    android:padding="10dp"
+    android:text="This is where I want my Recipe to Display"
+    android:textColor="@android:color/white"
+    android:textSize="22sp" />
+
+</FrameLayout>
 
 </LinearLayout>
