--- a/app/src/main/res/layout/fragment_randomize.xml
+++ b/app/src/main/res/layout/fragment_randomize.xml
@@ -11,7 +11,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/randomize_fragment"
-    android:textSize="30sp"/>
+    android:textSize="30sp"
+    android:textStyle="bold"/>
 
   <Spinner
     android:id="@+id/spinnerMeat"
@@ -52,10 +53,10 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
     android:layout_marginTop="70dp"
-    android:background="@android:color/holo_blue_light"
+    android:background="#ECEFF1"
     android:padding="10dp"
     android:text="This is where I want my Recipe to Display"
-    android:textColor="@android:color/white"
+    android:textColor="#000000"
     android:textSize="22sp" />
 
 </FrameLayout>
