--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,10 @@
 <resources>
 
   <!-- Base application theme. -->
-  <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+  <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
     <!-- Customize your theme here. -->
-    <item name="colorPrimary">#F57C00</item>
-    <item name="colorPrimaryDark">#FFCC80</item>
+    <item name="colorPrimary">#FFA000</item>
+    <item name="colorPrimaryDark">#FF6F00</item>
     <item name="colorAccent">@color/colorAccent</item>
   </style>
 
