--- a/app/src/main/res/layout/fragment_randomize.xml
+++ b/app/src/main/res/layout/fragment_randomize.xml
@@ -7,13 +7,16 @@
   android:background="@android:color/white"
   android:orientation="vertical">
 
+<!--
   <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/randomize_fragment"
     android:textSize="30sp"
     android:textStyle="bold"/>
+-->
 
+  <!--
   <Spinner
     android:id="@+id/spinnerMeat"
     android:layout_width="match_parent"
@@ -26,7 +29,22 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
-    android:text="@string/choose_vegetable"/>
+    android:text="@string/choose_vegetable"/> -->
+
+  <android.support.design.widget.TextInputLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:hintEnabled="true"
+    app:hintAnimationEnabled="true"
+    app:errorEnabled="true">
+
+    <android.support.design.widget.TextInputEditText
+      android:id="@+id/text_input_ingredient"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:hint="@string/please_enter_main_ingredient"/>
+
+  </android.support.design.widget.TextInputLayout>
 
   <Button
     android:id="@+id/randomize_button"
@@ -36,6 +54,7 @@
     android:textAppearance="@style/TextAppearance.AppCompat"
     android:text="@string/randomize"/>
   
+<!--
 <FrameLayout
   android:layout_width="match_parent"
   android:layout_height="match_parent">
@@ -61,4 +80,5 @@
 
 </FrameLayout>
 
+-->
 </LinearLayout>
