--- a/app/src/main/res/layout/fragment_randomize.xml
+++ b/app/src/main/res/layout/fragment_randomize.xml
@@ -53,32 +53,11 @@
     android:layout_marginBottom="36dp"
     android:textAppearance="@style/TextAppearance.AppCompat"
     android:text="@string/randomize"/>
-  
-<!--
-<FrameLayout
-  android:layout_width="match_parent"
-  android:layout_height="match_parent">
 
-  <ImageView
-    android:id="@+id/backgroundImage"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:scaleType="centerCrop"
-    android:src="@drawable/ic_image"/>
+  <ListView
+    android:id="@+id/random_recipe_result"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:text="@string/returned_recipe_rng"/>
 
-  <TextView
-    android:id="@+id/descTextView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical"
-    android:layout_marginTop="70dp"
-    android:background="#ECEFF1"
-    android:padding="10dp"
-    android:text="This is where I want my Recipe to Display"
-    android:textColor="#000000"
-    android:textSize="22sp" />
-
-</FrameLayout>
-
--->
 </LinearLayout>
