--- a/app/src/main/res/layout/fragment_randomize.xml
+++ b/app/src/main/res/layout/fragment_randomize.xml
@@ -54,10 +54,22 @@
     android:textAppearance="@style/TextAppearance.AppCompat"
     android:text="@string/randomize"/>
 
+  <TextView
+    android:id="@+id/recipe_name"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textStyle="bold"/>
+
+  <ImageView
+    android:id="@+id/recipe_image"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"/>
+
   <ListView
     android:id="@+id/random_recipe_result"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:text="@string/returned_recipe_rng"/>
+  
 
 </LinearLayout>
